....I..PS. [ZBXNEXT-2359] made server and proxy refuse to start if StartPollersUnreachable=0, but other pollers are started (asaveljevs)
....I..PS. [ZBX-8557] implemented housekeeper 30 minutes startup delay (Arturs)
A.F.I..PS. [ZBX-7720] increased size of "Host name", "Visible host name" and "Proxy name" fields to 128 characters (Sasha)

Bug fixes:
A......... [ZBX-8627] fixed problem with some of code not working on PHP 5.3 (Krists)
...G...PS. [ZBX-8599] fixed incorrect error message in Telnet based checks (Arturs)
....I..PS. [ZBX-8389] fixed compilation error due to undeclared CURLOPT_KEYPASSWD with versions of libcurl up to 7.16.4 (asaveljevs, dimir)
A.F....... [ZBX-8582] added use of escaping to variables in SQL queries to prevent possible injections in places where it was missing (Krists)
........S. [ZBX-8444] database queries for enabled items, triggers and hosts replaced with queries from configuration cache to improve performance for processing sleeping escalations (igors)
..F....PS. [ZBX-8608] added support of IP masks for action conditions (Sasha)
........S. [ZBX-8608] fixed clearing of discovered services with using CIDR notation in ip lists (Sasha)
........S. [ZBX-8415] fixed possible server crash on LLD host or host group update (dimir, Sasha)
...G...... [ZBX-8455] improved synchronization between perfromance collector and agent threads (wiper)
...G...... [ZBX-8236] fixed few memory leaks in Windows agent (wiper)
...G...PS. [ZBX-8601] fixed bad performance of the proxy configuration synchronization (Sasha)
.......PS. [ZBX-8600] fixed SQL errors in proxy configuration synchronization (Sasha)
A......... [ZBX-8563] added field "logtimefmt" to exported items (Krists)
..F....... [ZBX-8484] fixed "Plain text" screen elements with "Show text as HTML" enabled trying to display the text as preformatted (Andrejs)
.......PS. [ZBX-7621] changed virtual machine disk and network discovery to use device name instead of instance id in discovered item name (wiper)